<resources>
    <string name="app_name">CMRIT Placement App</string>
    <string name="welcome_to_cmrit_placement_app">Welcome To CMRIT Placement App</string>
    <string name="tpo">TPO Registeration</string>
    <string name="student">Student Registeration</string>
    <string name="tpo_login">TPO Login</string>
    <string name="student_login">Student Login</string>
    <string name="are_you_already_registered_on_this_app_use_the_buttons_below_to_log_in">Are you already registered on this app? Use the buttons below to Log in.</string>
    <string name="to_register_click_on_the_buttons_below">To register click on the buttons below!</string>
    <string name="loginHeader">Student Login</string>
    <string name="email_id">Email-ID:</string>
    <string name="pwd">Password:</string>
    <string name="loginbtn">Login</string>
    <string name="tpo_loginheader">TPO Login</string>
    <string name="enter_your_full_name">Enter your Full Name:</string>
    <string name="student_register">Student Register</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_institute_email_id">Enter your Email-id:</string>
    <string name="enter_your_usn">Enter your USN:</string>
    <string name="enter_a_password">Enter a Password:</string>
    <string name="re_enter_the_password">Re-enter the Password:</string>
    <string name="register">Register</string>
    <string name="tpo_register">TPO Register</string>
    <string name="enter_your_employee_id">Enter your Employee ID:</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="enter_role">Enter Role</string>
    <string name="enter_ctc">Enter CTC</string>
    <string name="enter_job_description">Enter Job Description</string>
    <string name="add_job">ADD</string>
    <string name="add_drive">Add New Drive</string>
    <string name="enter_job_url">Application Form Link</string>
    <string name="company_name">Company Name</string>
    <string name="role">Role</string>
    <string name="ctc">CTC</string>
    <string name="job_description">Job Description</string>
    <string name="apply">Apply</string>
    <string name="company_name_">Company Name:</string>
    <string name="role_">Role:</string>
    <string name="ctc_">CTC:</string>
    <string name="job_description_">Job Description:</string>
    <string name="log_out">Log Out</string>
</resources>