<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/limegreen">
    <Button
        android:id="@+id/tpoRegister"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/tpo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUser"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    <Button
        android:id="@+id/studentRegister"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/student"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tpoRegister"
        app:layout_constraintTop_toBottomOf="@+id/newUser"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_cmrit_placement_app"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:background="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/newRegistration"
        android:layout_width="299dp"
        android:layout_height="77dp"
        android:layout_marginTop="48dp"
        android:text="@string/are_you_already_registered_on_this_app_use_the_buttons_below_to_log_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />
    <Button
        android:id="@+id/tpoLogin"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/tpo_login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newRegistration"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/studentLogin"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/student_login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tpoLogin"
        app:layout_constraintTop_toBottomOf="@+id/newRegistration"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    <TextView
        android:id="@+id/newUser"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/to_register_click_on_the_buttons_below"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newRegistration"
        app:layout_constraintVertical_bias="0.475" />
</androidx.constraintlayout.widget.ConstraintLayout>