<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/limegreen">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/limegreen"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">


        <TableRow android:padding="5dp">

            <TextView
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Company Name:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idTVCompanyName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/company_name"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
            />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Role:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idTVRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/role"
                android:textColor="@color/black"
                android:textSize="20sp" />/>

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CTC:"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idTVCTC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/ctc"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Job Description:"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:padding="5dp">

            <TextView
                android:id="@+id/idTVJD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/job_description"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:padding="5dp">

            <Button
                android:id="@+id/idTVLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/apply"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>
</androidx.cardview.widget.CardView>